feat: adds job and job-application apis, updates job application statuses
