# bpp/backend/api/routes/job-application.go
@@ -6,7 +6,6 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-func JobRouter(router *gin.RouterGroup, clients *clients.Clients) {
-	router.POST("/create", handlers.CreateJob(clients))
-	router.GET("/applications", handlers.GetJobApplications(clients))
+func JobApplicationRouter(router *gin.RouterGroup, clients *clients.Clients) {
+	router.POST("/:id/status", handlers.UpdateJobApplicationStatus(clients))
 }
