# bpp/backend/docs/swagger.json
@@ -115,6 +115,47 @@
                 }
             }
         },
+        "/job-application/{id}/status": {
+            "post": {
+                "description": "Update a job application's status",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Update job application status",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Job Application ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/jobapplication.UpdateJobApplicationStatusRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/job/create": {
             "post": {
                 "description": "Create a job posting",
@@ -139,6 +180,44 @@
                 "responses": {
                     "200": {
                         "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/job/{id}/applications": {
+            "get": {
+                "description": "Get job applications",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get job applications",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Job ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/job.GetJobApplicationsResponse"
+                            }
+                        }
                     },
                     "500": {
                         "description": "Internal Server Error",
@@ -262,6 +341,71 @@
         }
     },
     "definitions": {
+        "github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.ApplicantDetails": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer"
+                },
+                "documents": {
+                    "$ref": "#/definitions/github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Documents"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "experience": {
+                    "$ref": "#/definitions/github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Experience"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Document": {
+            "type": "object",
+            "properties": {
+                "type": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Documents": {
+            "type": "object",
+            "properties": {
+                "aadharCard": {
+                    "$ref": "#/definitions/github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Document"
+                },
+                "drivingLicense": {
+                    "$ref": "#/definitions/github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Document"
+                },
+                "panCard": {
+                    "$ref": "#/definitions/github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Document"
+                },
+                "passport": {
+                    "$ref": "#/definitions/github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Document"
+                },
+                "resume": {
+                    "$ref": "#/definitions/github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Document"
+                }
+            }
+        },
+        "github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.Experience": {
+            "type": "object",
+            "properties": {
+                "years": {
+                    "type": "integer"
+                }
+            }
+        },
         "github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_types_payload_onest_cancel_request.City": {
             "type": "object",
             "properties": {
@@ -3113,12 +3257,6 @@
         "job.CreateJobRequest": {
             "type": "object",
             "properties": {
-                "applicationIds": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
                 "businessId": {
                     "type": "string"
                 },
@@ -3211,6 +3349,20 @@
                 "GenderFemale"
             ]
         },
+        "job.GetJobApplicationsResponse": {
+            "type": "object",
+            "properties": {
+                "applicantDetails": {
+                    "$ref": "#/definitions/github_com_ONEST-Network_Whatsapp-Chatbot_bpp_backend_pkg_database_mongodb_job-application.ApplicantDetails"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "status": {
+                    "$ref": "#/definitions/jobapplication.JobApplicationStatus"
+                }
+            }
+        },
         "job.JobType": {
             "type": "string",
             "enum": [
@@ -3281,6 +3433,36 @@
                     "type": "string"
                 },
                 "start": {
+                    "type": "string"
+                }
+            }
+        },
+        "jobapplication.JobApplicationStatus": {
+            "type": "string",
+            "enum": [
+                "APPLICATION_ACCEPTED",
+                "APPLICATION_REJECTED",
+                "ASSESSMENT_IN_PROGRESS",
+                "OFFER_REJECTED",
+                "OFFER_ACCEPTED",
+                "OFFER_EXTENDED",
+                "CANCELLED"
+            ],
+            "x-enum-varnames": [
+                "JobApplicationStatusApplicationAccepted",
+                "JobApplicationStatusApplicationRejected",
+                "JobApplicationStatusAssessmentInProgress",
+                "JobApplicationStatusOfferRejected",
+                "JobApplicationStatusOfferAccepted",
+                "JobApplicationStatusOfferExtended",
+                "JobApplicationStatusCancelled"
+            ]
+        },
+        "jobapplication.UpdateJobApplicationStatusRequest": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "description": "@Enum(APPLICATION_ACCEPTED, APPLICATION_REJECTED, ASSESSMENT_IN_PROGRESS, OFFER_REJECTED, OFFER_ACCEPTED, OFFER_EXTENDED, CANCELLED)",
                     "type": "string"
                 }
             }
